ckanext/kata/public/css/kata.css
/* ... */
header.masthead .account {
	-moz-box-shadow: 0 0 0 0 #fff;
	-webkit-box-shadow: 0 0 0 0 #fff;
	box-shadow: 0 0 0 0 #fff !important;
	background-color: transparent !important;

}
header.masthead .account .button {
	-moz-box-shadow: 0 0 0 0 #0c8bbe;
	-webkit-box-shadow: 0 0 0 0 #0c8bbe;
	box-shadow: 0 0 0 0 #0c8bbe;
	background-color: #6ccff6 !important;
	/*background-color: rgba(112,196,243,0.9) !important;*/
	background-color: 
	border: 0px;
	color: #000 !important;
	margin: 2px 5px 2px 0;
	padding: 4px 8px 3px;
	text-shadow: none !important;
	border-bottom-left-radius: 4px;
	border-bottom-right-radius: 4px;
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
	display: block;
	text-decoration: none;
}
header.masthead .account .button:hover {
	background-color: rgba(9,104,142,0.7) !important;
}
header.masthead .account .dropdown.open .button,
header.masthead .account .dropdown .button:hover {
/* Overwrite profile section buttons shadow color in main.css */
    box-shadow: 0 1px 0 #0c8bbe inset;
}
header.masthead .dropup, header.masthead .dropdown {
	display: inline-block;
}
header.masthead .user-dropdown-menu a {
	color: #000 !important;
}
header.masthead .user-dropdown-menu a:hover {
	color: #fff !important;
}
header.masthead .account .image img {
	border-right-color: #53cc61;
	opacity: 0.9;
}
header.masthead .section.account {
/* Overwrite profile avatar section alignment in main.css */
    float: right;
}
header.masthead .site-search {
/* Overwrite search field alignment in main.css */
    margin-right: 17px;
}
header.masthead .not-authed a {
	padding: 10px;
	font-weight: bold;
	color: black;
}
#help_navi {
	color: #000;
	margin-bottom: 5px;
	float: right;
	margin-right: 17px;
}
#help_navi a {
	color: black;
}
.tta-orange {
	color: #f1592a;
}
.tta-dblue {
	color: #03263E;
}
.tta-lblue {
	color: #063A5A;
}
.tta-green {
	color: #209D82;
}
.tta-blue {
	color: #6ccff6;
}
.tta-dgrey {
	color: #5a5a5c;
}
.tta-lgrey {
	color: #fefefe;
}
.tta-redorange {
	color: #f1592a;
}
.tta-link {
	color: #0c8bbe;
}
.tta-link-hover {
	color: #09688e;
}
.tta-green-main {
	color: #53cc61;
}
.tta-green-hover {
	color: #3ac34a;
}
[role="main"], .main {
	padding-bottom: 25px;
	padding-top: 25px;
	width: 970px !important;
	margin: auto auto 10px auto;
	background-color: #FFF;
	border: 1px solid;
	border-color: #000;
	-webkit-box-shadow: rgba(66, 66, 66, 0.8) 0 0 10px !important;
	box-shadow: rgba(66, 66, 66, 0.8) 0 0 10px !important;
	-moz-box-shadow: rgba(66, 66, 66, 0.8) 0 0 10px !important;
	background: none !important;
}
[role="main"] .primary {
	float: left;
	margin-right: 0px !important;
	width: 700px;
	margin-right: auto;
}
[role="main"] .secondary {
	float: right;
	margin-left: auto;
	width: 220px;
	margin-right: 0px;
}
.box {
	border: 0px !important;
}
.main:after, .main:before, [role="main"]:after, [role="main"]:before {
	border: 0;
}
.editing [role="main"], .editing .main {
	background: none;
}
.hero {
	background-image: none;
}
.hero .module-dark {
	padding: 0px;
}
.hero .module-dark .module-content {
	background-color: #f1592a !important;
    border: none !important;
    border-radius: 0 !important;
    -webkit-box-shadow: none !important;
	box-shadow: none !important;
	-moz-box-shadow: none !important;
}
.hero .module-popup {
	margin-top: 0px !important;
	float: left !important;
}
.hero-secondary {
	position: relative;
	float: right !important;
}
.hero-primary, .hero-secondary {
        width: 450px !important;
}
.hero:after {
	background-image: none !important;
	border: 0;
}
.module {
	-webkit-box-shadow: none !important;
	box-shadow: none !important;
	-moz-box-shadow: none !important;
	background-color: #FFF;
	border: 1px solid;
	border-color: #000;
    border-radius: 0px 0 0 0 !important;
    border-top-width: 1 !important;
}
.module .module {
	-webkit-box-shadow: none !important;
	box-shadow: none !important;
	-moz-box-shadow: none !important;
}
.module-heading {
  /* CKAN style override */
  *zoom: 1;
  margin: 0;
  padding: 7px 25px;
  font-size: 14px;
  line-height: 1.3;
  background-color: #5a5a5c;
  border-top: 0px !important;
  border-bottom: 0px !important;
  color: #fff;
}
.module:first-child .module-heading {
	border-radius: 0 !important;
}
.module-heading-add-dataset {
  *zoom: 1;
  margin: 0;
  padding: 7px 25px;
  font-size: 14px;
  line-height: 1.3;
  background-color: #5a5a5c;
  border-top: 0px !important;
  border-bottom: 0px !important;
  color: #ffffff;
  background-image: -webkit-linear-gradient(top, #5a5a5c, #5a5a5c);
  background-image: -moz-linear-gradient(top, #5a5a5c, #5a5a5c);
  background-image: -o-linear-gradient(top, #5a5a5c, #5a5a5c);
  background-image: -ms-linear-gradient(top, #5a5a5c, #5a5a5c);
  background-repeat: repeat no-repeat;  
}
.module-grey {
	background-color: #6ccff6;
}
.module-heading a.action {
  color: #fff !important;
}
.padded-module {
	padding: 15px 5px 5px 5px;
	background-color: #6ccff6 !important;
	-webkit-box-shadow: none !important;
	box-shadow: none !important;
	-moz-box-shadow: none !important;
}
.no-padding {
	padding: 0px 0px 0px 0px;
	-webkit-box-shadow: none !important;
	box-shadow: none !important;
	-moz-box-shadow: none !important;
}
.navbar-search .search-query {
	font-family: Arial, Tahoma, sans-serif;
}
.tag {
	color: #0c8bbe;
}
.add_action li {
	display: inline-block;
}
a.tag:hover {
	background-color: #0c8bbe !important;
	border: 1px solid #09688e !important;
	box-shadow: rgba(12, 94, 139, 1) inset !important;
	-webkit-box-shadow: rgba(12, 94, 139, 1) inset !important;
	-moz-box-shadow: rgba(12, 94, 139, 1) inset !important;
}
.wrapper {
	background: none !important;
	background-color: #fff !important;
	border: 0 !important;
	-webkit-box-shadow: none !important;
	box-shadow: none !important;
	-moz-box-shadow: none !important;
}
/* ... */

